fixed logo on mobile

--- a/main.css
+++ b/main.css
@@ -624,7 +624,7 @@ footer p {
     width: 88%;
     padding-top: 3%;
     padding-left: none;
-    margin-right: 12%;
+    padding-right: 12%;
   }
   /* Welcome message on main page */
   .welcome {
